syntax = "proto3";

package carcer_proto;

service Carcer {
  rpc setup(BrainRequest) returns (ServiceResponse) {}
  rpc createSocket(stream BrainMessage) returns (stream ServiceMessage) {}
}

message BrainRequest {}

message ServiceResponse {
  string name = 1;
  map<string, CommandDescription> palette = 2;
}

message CommandDescription {
  map<string, InputType> fields = 1;
}

message BrainMessage {
  Command payload = 2;
}

message ServiceMessage {
  string value = 1;
}

message Command {
  string name = 1;
  map<string, Field> fields = 2;
}

message Field {
  string value = 1;
  InputType type = 2;
}

enum InputType {
  STRING = 0;
}